# evaluator

./: CMakeLists.txt
demo/: policy.c
solution/: CMakeLists.txt  main.cpp
